--- a/views/pages/vendas/index.ejs
+++ b/views/pages/vendas/index.ejs
@@ -76,7 +76,7 @@
 													<th class="column-title">Número Documento</th>
 													<th class="column-title">Data</th>
 													<th class="column-title">Total Mercadoria</th>
-													<th class="column-title">Linhas Documento</th>
+												<!--	<th class="column-title">Linhas Documento</th> -->
 												</tr>
 											</thead>
 											
@@ -85,15 +85,15 @@
 												<tr>
 													<td><a href="/vendas/<%= ven.InvoiceNo %>"><%= ven.InvoiceNo %></a></td>
 													<td><a href="/clientes/<%= ven.CustomerID %>"><%= ven.CustomerID %></a></td>
-													<td><%= ven.NumDoc %></td>
-													<td class="date"><%= ven.InvoiceDate %></td>
-													<td><%= ven.GrossTotal %></td>
-													<td>
+													<td class="text-right"><%= ven.NumDoc %></td>
+													<td class="date text-right"><%= ven.InvoiceDate %></td>
+													<td class="text-right"><%= ven.GrossTotal %> &euro;</td>
+													<!--<td>
 														<% (ven.LinhasDoc).forEach(function(lin){ %>
 														<%= lin.CodArtigo %>
 														&#9866;
 														<% }); %>
-													</td>
+													</td> -->
 												</tr>
 												<% }); %>
 											</tbody>
